<resources>
    <string name="app_name">Know Your Government</string>
    <string name="aboutpage">aboutPage</string>
    <string name="searchlocation">searchLocation</string>
    <string name="separator">separator</string>
    <string name="bottomseperator">bottomSeperator</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="powered_by">Powered By</string>
    <string name="api"><u>Google Civic Information API</u></string>
    <string name="maker">© 2020, Paavan Soni</string>
    <string name="version">Version 1.0</string>
    <string name="politicianpicture">PoliticianPicture</string>
    <string name="address">Address:</string>
    <string name="textview">TextView</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="website">Website:</string>
    <string name="iconfortwitter">IconForTwitter</string>
    <string name="iconforfacebook">IconForFacebook</string>
    <string name="iconforyoutube">IconforYoutube</string>
    <string name="iconforgoogle">IconForGoogle+</string>
    <string name="politician_party">Politician party</string>
</resources>
